# insurance-ops-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_schema_backbone.py  0002_queue_fields.py  0003_claim_lifecycle.py  0004_insurance_message_ai_fields.py  0005_conversation_claim_link.py  0006_sla_persistence.py  0007_background_job_claiming.py  0008_file_asset_checksum.py  0009_domain_outbox_events.py  0010_dashboard_read_models.py  0011_idempotency_records.py  0012_ai_rate_limit_windows.py  0013_conversation_handoff.py  0014_claim_corrections.py  0015_export_artifacts.py
backend/app/: __init__.py  main.py  models.py  seed_data.py
backend/app/core/: auth_types.py  config.py  context.py  database.py  model_mixins.py  observability.py  permissions.py  repository.py  session.py  storage.py  store.py
backend/app/tests/: test_ai_budget_service.py  test_ai_guardrail_service.py  test_ai_telemetry_service.py  test_auth_context.py  test_background_job_service.py  test_background_worker.py  test_claim_correction_service.py  test_claim_export_service.py  test_claim_lifecycle_contract.py  test_claim_lifecycle_service.py  test_customer_portal_service.py  test_dashboard_metrics.py  test_dashboard_projection_service.py  test_google_sso.py  test_guarded_chatbot_service.py  test_idempotency_service.py  test_insurance_tenant_scope.py  (+10 more)
backend/scripts/: __init__.py  run_ai_evaluations.py  run_e2e_smoke.py  run_worker.py  seed_demo.py
(+94 files in other folders)
