[project]
name = "insurance-ops-backend"
version = "0.1.0"
description = "FastAPI backend for the Insurance Operations Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "google-auth>=2.35.0",
  "pypdf>=5.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
markers = [
  "integration: tests that require external services such as PostgreSQL"
]
